--- a/FinancialAssistant/build.gradle
+++ b/FinancialAssistant/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.6.+'
+        classpath 'com.android.tools.build:gradle:0.12.+'
     }
 }
 apply plugin: 'android'
@@ -13,16 +13,18 @@ repositories {
 }
 
 android {
-    compileSdkVersion 18
-    buildToolsVersion "18.0.1"
+    compileSdkVersion 20
+    buildToolsVersion "20.0.0"
 
     defaultConfig {
         minSdkVersion 7
-        targetSdkVersion 18
+        targetSdkVersion 20
     }
 }
 
 dependencies {
-	compile 'com.android.support:support-v4:19.0.1'
-	compile 'com.android.support:appcompat-v7:19.0.1'
+	compile 'com.android.support:support-v4:20+'
+	compile 'com.android.support:appcompat-v7:20+'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
 }
